--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="imbd">
               <div class="imbd-logo">
-                <img src="imdb.png" alt="imbd">
+                <img src="mbox/pics/imdb.png" alt="imbd">
               </div>
               <div class="imbd-rating">86.0/100</div>
             </div>
