path of pics updated

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
             <div class="imbd">
               <div class="imbd-logo">
-                <img src="mbox/pics/imdb.png" alt="imbd">
+                <img src="pics/imdb.png" alt="imbd">
               </div>
               <div class="imbd-rating">86.0/100</div>
             </div>
 
             <div class="rt">
               <div class="rt-logo">
-                <img src="rottentot.png" alt="RT">
+                <img src="pics/rottentot.png" alt="RT">
               </div>
               <div class="rt-rating">97%</div>
             </div>
@@ -74,7 +74,7 @@
     <div class="movie-cards">
         <div class="card1">
             <div class="card-photo">
-                <img src="stranger-things-card.jpg" alt="Stranger Things">
+                <img src="pics/stranger-things-card.jpg" alt="Stranger Things">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2016-Current</div>
@@ -82,13 +82,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">86.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="Rotten Tomatoes logo">
+                            <img src="pics/rottentot.png" alt="Rotten Tomatoes logo">
                         </div>
                         <div class="card-movie-rott-rating">97%</div>
                     </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="card2">
             <div class="card-photo">
-                <img src="batman.jpg" alt="">
+                <img src="pics/batman.jpg" alt="">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2005</div>
@@ -106,13 +106,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">82.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="Rotten Tomatoes logo">
+                            <img src="pics/rottentot.png" alt="Rotten Tomatoes logo">
                         </div>
                         <div class="card-movie-rt-rating">70%</div>
                     </div>
@@ -122,7 +122,7 @@
         </div>
         <div class="card3">
             <div class="card-photo">
-                <img src="spider-man.jpg" alt="">
+                <img src="pics/spider-man.jpg" alt="">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2018</div>
@@ -130,13 +130,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">84.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="Rotten Tomatoes logo">
+                            <img src="pics/rottentot.png" alt="Rotten Tomatoes logo">
                         </div>
                         <div class="card-movie-rt-rating">87%</div>
                     </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="card4">
             <div class="card-photo">
-                <img src="dunk.jpg" alt="Dunkirk poster">
+                <img src="pics/dunk.jpg" alt="Dunkirk poster">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2017</div>
@@ -154,13 +154,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">78.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="Rotten Tomatoes logo">
+                            <img src="pics/rottentot.png" alt="Rotten Tomatoes logo">
                         </div>
                         <div class="card-movie-rt-rating">94%</div>
                     </div>
@@ -179,7 +179,7 @@
     <div class="movie-cards">
         <div class="card1">
             <div class="card-photo">
-                <img src="dune.jpg" alt="Dune poster">
+                <img src="pics/dune.jpg" alt="Dune poster">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2021</div>
@@ -187,13 +187,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">84.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="">
+                            <img src="pics/rottentot.png" alt="">
                         </div>
                         <div class="card-movie-rt-rating">75%</div>
                     </div>
@@ -203,7 +203,7 @@
         </div>
         <div class="card2">
             <div class="card-photo">
-                <img src="notime.jpg" alt="No Time poster">
+                <img src="pics/notime.jpg" alt="No Time poster">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2021</div>
@@ -211,13 +211,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">76.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="">
+                            <img src="pics/rottentot.png" alt="">
                         </div>
                         <div class="card-movie-rt-rating">68%</div>
                     </div>
@@ -227,7 +227,7 @@
         </div>
         <div class="card3">
             <div class="card-photo">
-                <img src="shang-chi.jpg" alt="shang-chi poster">
+                <img src="pics/shang-chi.jpg" alt="shang-chi poster">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2021</div>
@@ -235,13 +235,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">79.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="">
+                            <img src="pics/rottentot.png" alt="">
                         </div>
                         <div class="card-movie-rt-rating">71%</div>
                     </div>
@@ -251,7 +251,7 @@
         </div>
         <div class="card4">
             <div class="card-photo">
-                <img src="don't-breathe.jpg" alt="Don't Breathe poster">
+                <img src="pics/don't-breathe.jpg" alt="Don't Breathe poster">
             </div>
             <div class="card-content">
                 <div class="card-movie-date">USA,2021</div>
@@ -259,13 +259,13 @@
                 <div class="card-movie-rating">
                     <div class="card-movie-imdb">
                         <div class="card-movie-imdb-logo">
-                            <img src="imdb.png" alt="IMDb logo">
+                            <img src="pics/imdb.png" alt="IMDb logo">
                         </div>
                         <div class="card-movie-imdb-rating">61.0/100</div>
                     </div>
                     <div class="card-movie-rt">
                         <div class="card-movie-rt-logo">
-                            <img src="rottentot.png" alt="">
+                            <img src="pics/rottentot.png" alt="">
                         </div>
                         <div class="card-movie-rt-rating">46%</div>
                     </div>
@@ -284,19 +284,19 @@
     <div class="movie-trailers">
         <div class="trailer-1">
             <div class="trailer-photo">
-                <img src="lamb.jpg" alt="">
+                <img src="pics/lamb.jpg" alt="">
             </div>
             <div class="trailer-name">Lamb(2021) Trailer</div>
         </div>
         <div class="trailer-2">
             <div class="trailer-photo">
-                <img src="horror.jpg" alt="">
+                <img src="pics/horror.jpg" alt="">
             </div>
             <div class="trailer-name extra">Will there be a new era of horror movies?</div>
         </div>
         <div class="trailer-3">
             <div class="trailer-photo">
-                <img src="sui_squad.jpg" alt="">
+                <img src="pics/sui_squad.jpg" alt="">
             </div>
             <div class="trailer-name extra">The Suicide Squad</div>
         </div>
@@ -313,25 +313,25 @@
         <div class="movie-cast">
             <div class="cast1">
                 <div class="cast-photo">
-                    <img src="keanu.jpg" alt="">
+                    <img src="pics/keanu.jpg" alt="">
                 </div>
                 <div class="cast-name">Keanu Reeves</div>
             </div>
             <div class="cast2">
                 <div class="cast-photo">
-                    <img src="ryan.jpg" alt="">
+                    <img src="pics/ryan.jpg" alt="">
                 </div>
                 <div class="cast-name">Ryan Reynolds</div>
             </div>
             <div class="cast3">
                 <div class="cast-photo">
-                    <img src="tim.jpg" alt="">
+                    <img src="pics/tim.jpg" alt="">
                 </div>
                 <div class="cast-name">Timothee Chalamet</div>
             </div>
             <div class="cast4">
                 <div class="cast-photo">
-                    <img src="chloe.jpg" alt="">
+                    <img src="pics/chloe.jpg" alt="">
                 </div>
                 <div class="cast-name">Chloe Grace Moretz</div>
             </div>
